--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>Calculadora Simples</title>
   </head>
@@ -12,35 +13,35 @@
     <div id="calculator-display">
       <div id="calculation"></div>
 
-      <div id="calculation-result"></div>
+      <div id="calculation-result">0</div>
     </div>
 
     <div id="calculator-buttons">
-      <div id="first-button-section">
-        <button id="seven-button">7</button>
-        <button id="eight-button">8</button>
-        <button id="nine-button">9</button>
-        <button id="multiplication-button">*</button>
+      <div class="button-row">
+        <button class="number-button" id="seven-button">7</button>
+        <button class="number-button" id="eight-button">8</button>
+        <button class="number-button" id="nine-button">9</button>
+        <button class="operation-button" id="multiplication-button">X</button>
       </div>
 
-      <div id="second-button-section">
-        <button id="four-button">4</button>
-        <button id="five-button">5</button>
-        <button id="six-button">6</button>
-        <button id="subtraction-button">-</button>
+      <div class="button-row">
+        <button class="number-button" id="four-button">4</button>
+        <button class="number-button" id="five-button">5</button>
+        <button class="number-button" id="six-button">6</button>
+        <button class="operation-button" id="subtraction-button">-</button>
       </div>
 
-      <div id="third-button-section">
-        <button id="one-button">1</button>
-        <button id="two-button">2</button>
-        <button id="one-button">3</button>
-        <button id="addition-button">+</button>
+      <div class="button-row">
+        <button class="number-button" id="one-button">1</button>
+        <button class="number-button" id="two-button">2</button>
+        <button class="number-button" id="one-button">3</button>
+        <button class="operation-button" id="addition-button">+</button>
       </div>
 
-      <div id="fourth-button-section">
-        <button id="zero-button">0</button>
+      <div class="button-row">
+        <button class="number-button" id="zero-button">0</button>
         <button id="reset-button">AC</button>
-        <button id="division-button">/</button>
+        <button class="operation-button" id="division-button">/</button>
         <button id="equal-button">=</button>
       </div>
     </div>
