--- a/index.html
+++ b/index.html
@@ -18,32 +18,118 @@
 
     <div id="calculator-buttons">
       <div class="button-row">
-        <button class="number-button" id="seven-button">7</button>
-        <button class="number-button" id="eight-button">8</button>
-        <button class="number-button" id="nine-button">9</button>
-        <button class="operation-button" id="multiplication-button">X</button>
+        <button
+          class="number-button"
+          id="seven-button"
+          onclick="insertNumber('7')"
+        >
+          7
+        </button>
+        <button
+          class="number-button"
+          id="eight-button"
+          onclick="insertNumber('8')"
+        >
+          8
+        </button>
+        <button
+          class="number-button"
+          id="nine-button"
+          onclick="insertNumber('9')"
+        >
+          9
+        </button>
+        <button
+          class="operation-button"
+          id="multiplication-button"
+          onclick="insertOperator('*')"
+        >
+          X
+        </button>
       </div>
 
       <div class="button-row">
-        <button class="number-button" id="four-button">4</button>
-        <button class="number-button" id="five-button">5</button>
-        <button class="number-button" id="six-button">6</button>
-        <button class="operation-button" id="subtraction-button">-</button>
+        <button
+          class="number-button"
+          id="four-button"
+          onclick="insertNumber('4')"
+        >
+          4
+        </button>
+        <button
+          class="number-button"
+          id="five-button"
+          onclick="insertNumber('5')"
+        >
+          5
+        </button>
+        <button
+          class="number-button"
+          id="six-button"
+          onclick="insertNumber('6')"
+        >
+          6
+        </button>
+        <button
+          class="operation-button"
+          id="subtraction-button"
+          onclick="insertOperator('-')"
+        >
+          -
+        </button>
       </div>
 
       <div class="button-row">
-        <button class="number-button" id="one-button">1</button>
-        <button class="number-button" id="two-button">2</button>
-        <button class="number-button" id="one-button">3</button>
-        <button class="operation-button" id="addition-button">+</button>
+        <button
+          class="number-button"
+          id="one-button"
+          onclick="insertNumber('1')"
+        >
+          1
+        </button>
+        <button
+          class="number-button"
+          id="two-button"
+          onclick="insertNumber('2')"
+        >
+          2
+        </button>
+        <button
+          class="number-button"
+          id="three-button"
+          onclick="insertNumber('3')"
+        >
+          3
+        </button>
+        <button
+          class="operation-button"
+          id="addition-button"
+          onclick="insertOperator('+')"
+        >
+          +
+        </button>
       </div>
 
       <div class="button-row">
-        <button class="number-button" id="zero-button">0</button>
-        <button id="reset-button">AC</button>
-        <button class="operation-button" id="division-button">/</button>
-        <button id="equal-button">=</button>
+        <button
+          class="number-button"
+          id="zero-button"
+          onclick="insertNumber('0')"
+        >
+          0
+        </button>
+        <button id="reset-button" onclick="resetCalculation()">AC</button>
+        <button
+          class="operation-button"
+          id="division-button"
+          onclick="insertOperator('/')"
+        >
+          /
+        </button>
+        <button id="equal-button" onclick="calculateResult('=')">=</button>
       </div>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
